Update and rename send to dynalist.html to sendtodynalist.html

--- a/sendtodynalist.html
+++ b/sendtodynalist.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Dynalist Inbox</title>
+  <title>send to Dynalist</title>
 </head>
 <body>
   <h1>Dynalist Inbox</h1>
