記事部分調整

--- a/article.html
+++ b/article.html
@@ -1,7 +1,22 @@
 <!-- article.html -->
 
-<div id="article-content">
-    <!-- JavaScriptで記事のコンテンツを追加 -->
-</div>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>morvra</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
 
-<script src="./article.js"></script>
+    <main>
+        <div id="article-title"></div>
+        <div id="article-content">
+            <!-- JavaScriptで記事のコンテンツを追加 -->
+        </div>
+    </main>
+
+    <script src="./article.js"></script>
+</body>
+</html>
