--- a/blog.html
+++ b/blog.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <main>
     <h1>My Blog</h1>
     <ul id="article-list">
         <!-- JavaScriptで記事リストを追加 -->
     </ul>
 
     <script src="./articlelist.js"></script>
+    </main>
 </body>
 </html>
