--- a/article.html
+++ b/article.html
@@ -18,5 +18,8 @@
     </main>
 
     <script src="./article.js"></script>
+    <footer>
+        <p>&copy; 2023 morvra</p>
+    </footer>
 </body>
 </html>
