--- a/blog.html
+++ b/blog.html
@@ -16,5 +16,8 @@
 
     <script src="./articlelist.js"></script>
     </main>
+    <footer>
+        <p>&copy; 2023 morvra</p>
+    </footer>
 </body>
 </html>
