--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
     <script src="./articlelist.js"></script>
     </main>
     <footer>
-        <p>&copy; 2023 morvra</p>
+        <p>&copy; morvra</p>
     </footer>
 </body>
 </html>
