--- a/article.html
+++ b/article.html
@@ -19,7 +19,7 @@
 
     <script src="./article.js"></script>
     <footer>
-        <p>&copy; 2023 morvra</p>
+        <p>&copy; morvra</p>
     </footer>
 </body>
 </html>
