--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <h1>morvra</h1>
+            <nav>
+                <ul>
+                    <li><a href="blog.html">Home</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <main>
     <h1>My Blog</h1>
     <ul id="article-list">
