--- a/article.html
+++ b/article.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <h1>morvra</h1>
+            <nav>
+                <ul>
+                    <li><a href="blog.html">Home</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
     <main>
         <div id="article-title"></div>
