--- a/article.html
+++ b/article.html
@@ -22,7 +22,7 @@
 
     <main>
         <div id="article-title"></div>
-        <span class="article-date"></span>
+        <div id="article-date"></div>
         <div id="article-content">
             <!-- JavaScriptで記事のコンテンツを追加 -->
         </div>
