topページのURL変更とヘッダー周り調整

--- a/index.html
+++ b/index.html
@@ -1,7 +1,32 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>morvra blog</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <div class="container">
+            <h1><a href="index.html"></a>morvra</a></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+    <ul id="article-list">
+        <!-- JavaScriptで記事リストを追加 -->
+    </ul>
+
+    <script src="./articlelist.js"></script>
+    </main>
+    <footer>
+        <p>&copy; morvra</p>
+    </footer>
 </body>
 </html>
