--- a/article.html
+++ b/article.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <div class="container">
-            <h1><a href="index.html">morvra</a></h1>
+            <h1><a href="https://morvra.github.io">morvra</a></h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="https://morvra.github.io">Home</a></li>
                 </ul>
             </nav>
         </div>
