--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <header>
         <div class="container">
-            <h1><a href="index.html"></a>morvra</a></h1>
+            <h1><a href="https://morvra.github.io"></a>morvra</a></h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="https://morvra.github.io">Home</a></li>
                 </ul>
             </nav>
         </div>
