--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="container">
-            <h1><a href="https://morvra.github.io"></a>morvra</a></h1>
+            <h1><a href="https://morvra.github.io">morvra</a></h1>
             <nav>
                 <ul>
                     <li><a href="https://morvra.github.io">Home</a></li>
