--- a/article.html
+++ b/article.html
@@ -11,16 +11,9 @@
     <link href='https://i.gyazo.com/067c7431ffae716296621d499f4a46a3.png' rel='apple-touch-icon'/>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1><a href="https://morvra.github.io">morvra</a></h1>
-            <nav>
-                <ul>
-                    <li><a href="https://morvra.github.io">Home</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+
+    <!--#include file="header.html" -->
+    <div id="header"></div>
 
     <main>
         <div id="article-title"></div>
@@ -31,8 +24,18 @@
     </main>
 
     <script src="./article.js"></script>
-    <footer>
-        <p>&copy; morvra</p>
-    </footer>
+
+    <!--#include file="footer.html" -->
+    <div id="footer"></div>
+
+    <script>
+        fetch("header.html")
+          .then((response) => response.text())
+          .then((data) => document.querySelector("#header").innerHTML = data);
+        fetch("footer.html")
+          .then((response) => response.text())
+          .then((data) => document.querySelector("#footer").innerHTML = data);
+    </script>
+
 </body>
 </html>
