--- a/article.html
+++ b/article.html
@@ -18,6 +18,7 @@
     <main>
         <div id="article-title"></div>
         <div id="article-date"></div>
+        <div id="article-tags"></div>
         <div id="article-content">
             <!-- JavaScriptで記事のコンテンツを追加 -->
         </div>
