--- a/taglist.html
+++ b/taglist.html
@@ -5,11 +5,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tag List - morvra</title>
+    <title>morvra</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link href='./favicon16.png' rel='icon' type='image/x-icon'/>
+    <link href='https://i.gyazo.com/067c7431ffae716296621d499f4a46a3.png' rel='shortcut icon'/>
+    <link href='https://i.gyazo.com/067c7431ffae716296621d499f4a46a3.png' rel='apple-touch-icon'/>
 </head>
 <body>
-    <h1>Tag List</h1>
-    <ul id="tag-list"></ul>
+
+    <!--#include file="header.html" -->
+    <div id="header"></div>
+
+    <main>
+        <h1>Tag List</h1>
+        <ul id="tag-list"></ul>
+    </main>
 
     <script>
         fetch('./data.json')
@@ -51,5 +61,18 @@
             })
             .catch(error => console.error('Error fetching data:', error));
     </script>
+
+    <!--#include file="footer.html" -->
+    <div id="footer"></div>
+
+    <script>
+        fetch("header.html")
+          .then((response) => response.text())
+          .then((data) => document.querySelector("#header").innerHTML = data);
+        fetch("footer.html")
+          .then((response) => response.text())
+          .then((data) => document.querySelector("#footer").innerHTML = data);
+    </script>
+
 </body>
 </html>
