--- a/taglist.html
+++ b/taglist.html
@@ -43,7 +43,7 @@
                 for (const tag in groupedArticles) {
                     const tagListItem = document.createElement('li');
                     const tagHeader = document.createElement('h2');
-                    tagHeader.textContent = tag;
+                    tagHeader.textContent = tag.replace('#', ''); // #を削除してタグを表示
                     tagListItem.appendChild(tagHeader);
 
                     const articleList = document.createElement('ul');
@@ -60,8 +60,6 @@
                     tagList.appendChild(tagListItem);
                 }
 
-                // 見出しのテキストから#を削除
-                tagListTitle.textContent = tagListTitle.textContent.replace('#', '');
             })
             .catch(error => console.error('Error fetching data:', error));
     </script>
