--- a/header.html
+++ b/header.html
@@ -3,6 +3,7 @@
         <h1><a href="https://morvra.github.io">morvra</a></h1>
         <nav>
             <ul>
+                <li><a href="./piece">Piece</a></li>
                 <li><a href="./article.html?id=uVd0FvsIz5xGXZkp1GR93wB3">About</a></li>
             </ul>
         </nav>
