--- a/article.html
+++ b/article.html
@@ -16,11 +16,13 @@
     <div id="header"></div>
 
     <main>
-        <div id="article-title"></div>
-        <div id="article-date"></div>
-        <div id="article-tags"></div>
-        <div id="article-content">
-            <!-- JavaScriptで記事のコンテンツを追加 -->
+        <div id="article">
+            <div id="article-title"></div>
+            <div id="article-date"></div>
+            <div id="article-tags"></div>
+            <div id="article-content">
+                <!-- JavaScriptで記事のコンテンツを追加 -->
+            </div>
         </div>
     </main>
 
