--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
         <nav>
             <ul>
                 <li><a href="./piece">Piece</a></li>
-                <li><a href="./article.html?id=uVd0FvsIz5xGXZkp1GR93wB3">About</a></li>
+                <li><a href="./article?id=uVd0FvsIz5xGXZkp1GR93wB3">About</a></li>
             </ul>
         </nav>
     </div>
