--- a/tag.html
+++ b/tag.html
@@ -1,9 +1,9 @@
-<!-- tag.html --><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>morvra</title>
+    <title>Tag - morvra</title>
     <link rel="stylesheet" href="./styles.css">
     <link href='./favicon16.png' rel='icon' type='image/x-icon'/>
     <link href='https://i.gyazo.com/067c7431ffae716296621d499f4a46a3.png' rel='shortcut icon'/>
@@ -15,8 +15,7 @@
     <div id="header"></div>
 
     <main>
-        <div id="taglist">
-        </div>
+        <ul id="tag-list"></ul>
     </main>
 
     <script src="./tag.js"></script>
