--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
-        <h1><a href="https://morvra.github.io">morvra</a></h1>
+        <h1><a href="https://morvra.github.io">morvra lists</a></h1>
         <nav>
             <ul>
                 <li><a href="./piece">Piece</a></li>
