--- a/piece.html
+++ b/piece.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piece - morvra</title>
+    <title>Piece - morvra lists</title>
     <link rel="stylesheet" href="./styles.css">
     <link href='./favicon16.png' rel='icon' type='image/x-icon'/>
     <link href='https://i.gyazo.com/067c7431ffae716296621d499f4a46a3.png' rel='shortcut icon'/>
