--- a/tag.html
+++ b/tag.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>morvra lists</title>
     <link rel="stylesheet" href="./styles.css">
-    <link href='./favicon16.png' rel='icon' type='image/x-icon'/>
-    <link href='https://i.gyazo.com/067c7431ffae716296621d499f4a46a3.png' rel='shortcut icon'/>
-    <link href='https://i.gyazo.com/067c7431ffae716296621d499f4a46a3.png' rel='apple-touch-icon'/>
+    <link href='./bullet_icon.png' rel='icon' type='image/x-icon'/>
+    <link href='./bullet_icon.png' rel='shortcut icon'/>
+    <link href='./bullet_icon.png' rel='apple-touch-icon'/>
 </head>
 <body>
 
