--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
-        <h1 class="blog-title"><a href="https://morvra.github.io"><img href="./bullet_icon.png" class="blog-icon">morvra lists</a></h1>
+        <h1 class="blog-title"><a href="https://morvra.github.io"><img src="./bullet_icon.png" class="blog-icon">morvra lists</a></h1>
         <nav>
             <ul>
                 <li><a href="./piece">Piece</a></li>
