--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href='./bullet_icon.png' rel='icon' type='image/x-icon'/>
     <link href='./bullet_icon.png' rel='shortcut icon'/>
     <link href='./bullet_icon.png' rel='apple-touch-icon'/>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3575252598876356"
+     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-3575252598876356">
 </head>
 <body>
 
