--- a/article.html
+++ b/article.html
@@ -11,6 +11,7 @@
     <link href='./bullet_icon.png' rel='apple-touch-icon'/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3575252598876356"
      crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-3575252598876356">
 </head>
 <body>
 
