--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>morvra lists</title>
+    
     <link rel="stylesheet" href="./styles.css">
     <link href='./bullet_icon.png' rel='icon' type='image/x-icon'/>
     <link href='./bullet_icon.png' rel='shortcut icon'/>
     <link href='./bullet_icon.png' rel='apple-touch-icon'/>
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3575252598876356"
      crossorigin="anonymous"></script>
     <meta name="google-adsense-account" content="ca-pub-3575252598876356">
@@ -19,11 +22,20 @@
     <div id="header"></div>
 
     <main>
-    <ul id="article-list">
+        <div id="top-module">
+            <img class="top-icon" href="https://gyazo.com/821ae163e2ae917475d3dc5fe2b94732/thumb/350#.png">
+            <ul id="top-list">
+                <li><a href="./article?id=uVd0FvsIz5xGXZkp1GR93wB3"><i class="fa fa-info" aria-hidden="true"></i> About</a></li>
+                <li><a href="./piece"><i class="fa-solid fa-puzzle-piece" aria-hidden="true"></i> Piece</a></li>
+                <li><a href="./taglist"><i class="fa fa-tags" aria-hidden="true"></i> Taglist</a></li>
+            </ul>
+        </div>
+        <h2>記事一覧</h2>
+        <ul id="article-list">
         <!-- JavaScriptで記事リストを追加 -->
-    </ul>
+        </ul>
 
-    <script src="./articlelist.js"></script>
+        <script src="./articlelist.js"></script>
     </main>
 
     <!--#include file="footer.html" -->
