--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
     <main>
         <div id="top-module">
-            <img class="top-icon" href="https://gyazo.com/821ae163e2ae917475d3dc5fe2b94732/thumb/350#.png">
+            <img class="top-icon" src="https://gyazo.com/821ae163e2ae917475d3dc5fe2b94732/thumb/350#.png">
             <ul id="top-list">
                 <li><a href="./article?id=uVd0FvsIz5xGXZkp1GR93wB3"><i class="fa fa-info" aria-hidden="true"></i> About</a></li>
-                <li><a href="./piece"><i class="fa-solid fa-puzzle-piece" aria-hidden="true"></i> Piece</a></li>
+                <li><a href="./piece"><i class="fa fa-puzzle-piece" aria-hidden="true"></i> Piece</a></li>
                 <li><a href="./taglist"><i class="fa fa-tags" aria-hidden="true"></i> Taglist</a></li>
             </ul>
         </div>
