--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div id="top-module">
             <img class="top-icon" src="https://gyazo.com/821ae163e2ae917475d3dc5fe2b94732/thumb/350#.png">
             <ul id="top-list">
-                <li><a href="./article?id=uVd0FvsIz5xGXZkp1GR93wB3"><i class="fa fa-info" aria-hidden="true"></i>   About<br>このサイトについて</a></li>
-                <li><a href="./piece"><i class="fa fa-puzzle-piece" aria-hidden="true"></i>  Piece<br>記事未満のつぶやき</a></li>
+                <li><a href="./article?id=uVd0FvsIz5xGXZkp1GR93wB3"><i class="fa fa-info" aria-hidden="true"></i>   About</a><br>　このサイトについて</li>
+                <li><a href="./piece"><i class="fa fa-puzzle-piece" aria-hidden="true"></i>  Piece</a><br>　記事未満のつぶやき</li>
                 <li><a href="./taglist"><i class="fa fa-tags" aria-hidden="true"></i> Taglist</a></li>
             </ul>
         </div>
