--- a/piece.html
+++ b/piece.html
@@ -18,6 +18,7 @@
     <main>
 
         <div id="article-container"></div>
+	<div id="navigation-container"></div>
 		
 	    <script src="./piece.js"></script>
 
