--- a/article.html
+++ b/article.html
@@ -23,6 +23,23 @@
             <div id="article-title"></div>
             <div id="article-date"></div>
             <div id="article-tags"></div>
+
+            <div id="ad">
+                スポンサードリンク
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3575252598876356"
+         crossorigin="anonymous"></script>
+                <!-- 横長レスポンシブ -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-3575252598876356"
+                     data-ad-slot="1012028524"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+                <script>
+                     (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+
             <div id="article-content">
                 <!-- JavaScriptで記事のコンテンツを追加 -->
             </div>
