--- a/article.html
+++ b/article.html
@@ -38,7 +38,7 @@
                      data-ad-client="ca-pub-3575252598876356"
                      data-ad-slot="1012028524"
                      data-ad-format="auto"
-                     data-full-width-responsive="true"></ins>
+                     data-full-width-responsive="false"></ins>
                 <script>
                      (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
