--- a/article.html
+++ b/article.html
@@ -30,19 +30,17 @@
             
             <div id="ad">
                 スポンサードリンク
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3575252598876356"
-         crossorigin="anonymous"></script>
-                <!-- 横長レスポンシブ -->
-                <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-3575252598876356"
-                     data-ad-slot="1012028524"
-                     data-ad-format="auto"
-                     data-full-width-responsive="false"></ins>
-                <script>
-                     (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-            </div>
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- 記事下レスポンシブ -->
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-3575252598876356"
+                         data-ad-slot="6223968026"
+                         data-ad-format="rectangle"></ins>
+                    <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+             </div>
 
         </div>
     </main>
