--- a/piece.html
+++ b/piece.html
@@ -9,6 +9,7 @@
     <link href='./bullet_icon.png' rel='icon' type='image/x-icon'/>
     <link href='./bullet_icon.png' rel='shortcut icon'/>
     <link href='./bullet_icon.png' rel='apple-touch-icon'/>
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3575252598876356"
      crossorigin="anonymous"></script>
 </head>
