--- a/header.html
+++ b/header.html
@@ -3,8 +3,9 @@
         <h1 class="blog-title"><a href="https://morvra.github.io"><img src="./bullet_icon.png" class="blog-icon">morvra lists</a></h1>
         <nav>
             <ul>
-                <li><a href="./piece">Piece</a></li>
-                <li><a href="./article?id=uVd0FvsIz5xGXZkp1GR93wB3">About</a></li>
+                <li><a href="./article?id=uVd0FvsIz5xGXZkp1GR93wB3"><i class="fa fa-info" aria-hidden="true"></i></a></li>
+                <li><a href="./piece"><i class="fa fa-puzzle-piece" aria-hidden="true"></i></a></li>
+                <li><a href="./taglist"><i class="fa fa-tags" aria-hidden="true"></i></a></li>
             </ul>
         </nav>
     </div>
