--- a/syadoba.html
+++ b/syadoba.html
@@ -155,6 +155,7 @@
       border-radius: 6px;
       cursor: pointer;
       font-size: 14px;
+      color: #333;    
       transition: background 0.2s, border-color 0.2s;
     }
     .toggle-button-group button.active {
