ボタンのテキスト色修正

--- a/syadoba.html
+++ b/syadoba.html
@@ -136,11 +136,11 @@
     }
     .form-action-button.primary { background: #1abc9c; }
     .form-action-button.primary:hover { background: #16a085; }
-    .form-action-button.secondary { background: #F39C12; }
+    .form-action-button.secondary { background: #F39C12; color: white; }
     .form-action-button.secondary:hover { background: #d35400; }
     .form-action-button.neutral { background: #7f8c8d; }
     .form-action-button.neutral:hover { background: #5d6d7e; }
-    .form-action-button.danger { background: #e74c3c; }
+    .form-action-button.danger { background: #e74c3c; color: white; }
     .form-action-button.danger:hover { background: #c0392b; }
 
     .toggle-button-group {
