--- a/syadoba.html
+++ b/syadoba.html
@@ -369,7 +369,7 @@
         height: 24px;
         padding: 0;
         font-size: 18px;
-        font-weight: bold;
+	color: #333;
         border-radius: 4px;
         border: 1px solid #ccc;
         background: #ecf0f1;
