--- a/syadoba.html
+++ b/syadoba.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link href='./Sv_icon.png' rel='icon' type='image/x-icon'/>
+  <link href='./Sv_icon.png' rel='shortcut icon'/>
+  <link href='./Sv_icon.png' rel='apple-touch-icon'/>
   <title>シャドウバースWB 対戦支援ツール</title>
   <style>
     body {
