--- a/syadoba.html
+++ b/syadoba.html
@@ -496,7 +496,7 @@
 
       .match-record-card .delete-card-button {
           position: absolute;
-          bottom: 6px;
+          top: 6px;
           right: 6px;
           background: transparent;
           border: none;
